Fix logo on mobile

--- a/themes/bookworm/assets/scss/templates/_navigation.scss
+++ b/themes/bookworm/assets/scss/templates/_navigation.scss
@@ -27,7 +27,7 @@ header {
   .navbar-brand {
     @include tablet {
       img {
-        height: 30px;
+        height: 100px;
       }
     }
   }
